Added script element for chai.js inside index.html

--- a/foobar/index.html
+++ b/foobar/index.html
@@ -11,5 +11,6 @@
         <h2>Foo Bar Algorithm</h2>
     </div>
     <script src="foobar.js"></script>
+    <script src="chai.js" type="text/javascript"></script>
 </body>
 </html>
