Added New Files: test.html and style.css. Added a body for index.html to describe what I learned.

--- a/foobar/index.html
+++ b/foobar/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
 <body>
-    <div class="" id="">
-        <h2>Foo Bar Algorithm</h2>
-    </div>
+    <main class="">
+        <div class="" id="">
+            <h2>Foo Bar Algorithm</h2>
+        </div>
+        <body class="" id="">
+            <h5>What I learned about: Chai</h5>
+            <h5>What I learned about: Mocha</h5>
+            <h5>What I learned about: ES6 Testing</h5>
+        </body>
+    </main>
     <!--
         Uncaught SyntaxError: Unexpected token 'export' (at foobar.js:37:1)
         The type module tells the browser that this file is a JS file.
