Added script:src for chai and mocha to test.html

--- a/foobar/index.html
+++ b/foobar/index.html
@@ -12,11 +12,11 @@
         <div class="" id="">
             <h2>Foo Bar Algorithm</h2>
         </div>
-        <body class="" id="">
+        <div class="" id="">
             <h5>What I learned about: Chai</h5>
             <h5>What I learned about: Mocha</h5>
             <h5>What I learned about: ES6 Testing</h5>
-        </body>
+        </div>
     </main>
     <!--
         Uncaught SyntaxError: Unexpected token 'export' (at foobar.js:37:1)
